monument-art-store/clientApp/src/app/components/login/login.component.css
.card {
    background-color: transparent;
    z-index: 2;
    border: none;
}

.card-title {
    text-transform: uppercase;
    color: #ffffff;
}

.form-text, label {
    color: #ffffff !important;
}

.invalid-feedback {
    background: #ffffff;
}

.card-body {
    text-align: left;
    padding: 5%;

}
.registerP {
    color: #ffffff !important;
    font-size: 14px;
}

.registerA {
    text-decoration: none;
    color: #0984e3;
    background-color: #ffffff;
    padding: 1%;
}

.loginForm {
    margin-top: 20px;
}

.card-footer {
    border: none;
    background-color: transparent;
}

